Implement templates for typed API server
